<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="end|center_vertical"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/select_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_image_to_scan"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/create_case_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_case"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/load_case_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/load_case"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/save_to_sheet_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_to_sheet"
        android:visibility="gone"
        tools:visibility="visible" />

    <Button
        android:id="@+id/edit_script_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_app_script"
        android:visibility="gone"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/selected_image_for_scanning"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Spinner
            android:id="@+id/sort_spinner"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/filter_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/all_entries"
        android:textAppearance="?attr/textAppearanceHeadline6" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entries_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/list_item_entry" />

    <TextView
        android:id="@+id/total_amount_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:textAppearance="?attr/textAppearanceHeadline5"
        tools:text="@string/total" />

</LinearLayout>
