<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_main_root"
    tools:context=".fragments.main.MainFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_main_script_description_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/script_tab_description"
        app:layout_constraintEnd_toStartOf="@+id/fragment_main_generate_description_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_main_script_description_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_main_generate_description_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/generate_description"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_main_script_description_text_input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragment_main_script_description_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fragment_main_text_input_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:hint="@string/fragment_main_script_text_input_layout_hint_text"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_buttons_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_main_script_description_text_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fragment_main_script_text_input_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:singleLine="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fragment_main_buttons_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fragment_main_buttons_title"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintBottom_toTopOf="@+id/fragment_main_buttons_scroll_view"
        app:layout_constraintStart_toStartOf="parent" />

    <HorizontalScrollView
        android:id="@+id/fragment_main_buttons_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/fragment_main_buttons_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_1_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/fragment_main_action_1_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_2_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/fragment_main_action_2_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_3_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/fragment_main_action_3_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_4_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/fragment_main_action_4_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_5_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/fragment_main_action_5_button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_main_action_6_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/fragment_main_action_6_button_text" />
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
